--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>norsktelling</title>
         <link rel="stylesheet" href="styles.css"/>
         <script src="n2words.js"></script>
